# cookiecutter-python-base

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  changelog.bak.md  cookiecutter.json  noxfile.py  pyproject.toml  requirements.txt
.github/: changelog-labels.yaml  release-drafter-config.yaml
changelog.d/: 20230530_140016_pfmsoft_87_use_scriv_to_maintain_changelog.md  20230530_173938_pfmsoft_89_add_scriv_support_to_cookiecutter_code.md  20241022_044257_pfmsoft_91_new_workflow_dev_doc_1.md  20241023_122321_pfmsoft_update_project_docs.md  20241023_154913_pfmsoft_dev.md  20241028_034946_pfmsoft_sphinx_docs_child.md  20241101_092528_pfmsoft_typer_cli_example.md  20241101_192914_pfmsoft_dev.md  scriv.ini
changelog.d/scriv/: entry_title_template.md.j2  new_fragment.md.j2
changelog.d/templates/: new_fragment.md.j2
dev_docs/: dependencies.md  dev-todo.md  dev_dependencies.md  project-setup.md  read-the-docs.md
docs/: dev-todo.md  git-reference.md  project-setup.md  workflow.md
src/cookiecutter_python_base/: __init__.py
{{ cookiecutter.project_name}}/: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  noxfile.py  pyproject.toml
{{ cookiecutter.project_name}}/.github/: release-drafter-config.yaml
{{ cookiecutter.project_name}}/.github/workflows/: pytest-dev.yaml  pytest-main.yaml  pytest-on-push.yaml  pytest.yaml  release-drafter.yaml  update-changelog.yaml
{{ cookiecutter.project_name}}/changelog.d/templates/: entry_title_template.md.j2  new_fragment.md.j2
{{ cookiecutter.project_name}}/dev-docs/: git-reference.md  project-setup.md  release-checklist.md  sphinx_docs.md  workflow.md
{{ cookiecutter.project_name}}/docs/source/: click_cli.rst  conf.py  index.md  index.rst  {{ cookiecutter.package_name }}_cli.rst
{{ cookiecutter.project_name}}/docs/source/documentation/: changelog.md
{{ cookiecutter.project_name}}/docs/source/documentation/api-generated/: modules.rst
{{ cookiecutter.project_name}}/docs/source/documentation/cli/: main.rst
{{ cookiecutter.project_name}}/scripts/: connect-to-github.sh  docs-build.sh  initial-git-setup.sh
{{ cookiecutter.project_name}}/src/{{ cookiecutter.package_name }}/: __init__.py
{{ cookiecutter.project_name}}/src/{{ cookiecutter.package_name }}/cli/: cli_base.py  hash_file_cli.py  main.py  main_typer.py
{{ cookiecutter.project_name}}/tests/: conftest.py  model.py
{{ cookiecutter.project_name}}/tests/resources/: __init__.py
{{ cookiecutter.project_name}}/tests/resources/files_1/: __init__.py  ipsum_1.txt
{{ cookiecutter.project_name}}/tests/resources/models/: file_comparison.py  file_system_resource.py
{{ cookiecutter.project_name}}/tests/{{ cookiecutter.package_name }}/: test_console.py  test_typer_command_paths.py  test_typer_hash.py
