[build-system]
requires = ["flit_core >=3.10,<4"]
build-backend = "flit_core.buildapi"

[project]
keywords = ["cookiecutter", "python"]
classifiers = [
    "{{ cookiecutter.development_status }}",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
name = "cookiecutter-python-base"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Chad Lowe", email = "pfmsoft.dev@gmail.com" }]
dynamic = ["version", "description"]
dependencies = ["cookiecutter"]

#[project.scripts]


[project.urls]
Documentation = "https://github.com/DonalChilde/cookiecutter-python-base#readme"
#Documentation_rtd = "https://cookiecutter-python-base.readthedocs.io"
Issues = "https://github.com/DonalChilde/cookiecutter-python-base/issues"
Source = "https://github.com/DonalChilde/cookiecutter-python-base"


# [project.optional-dependencies]
# dev = [

#     # Automation
#     "nox",
#     "pre-commit",

#     # Linting and Formatting
#     "black",
#     "isort",

#     # Tools
#     "pysnooper",
#     "scriv",
# ]
# lint = ["pylint", "mypy"]
# doc = [
#     # Documentation
#     "Sphinx",
#     "sphinx-autobuild",
#     "sphinx-autodoc-typehints",
#     "sphinx_rtd_theme",
#     "myst-parser",
#     "sphinx-click",
# ]
# vscode = ["esbonio", "rst2html", "rstcheck"]
# testing = ["pytest", "coverage[toml]", "pytest-cov"]


[dependency-groups]
dev = [

    # Automation
    "nox",
    "pre-commit",

    # Linting and Formatting
    "ruff",
    "mypy",

    # Tools
    "pysnooper",
    "scriv",

    # Testing
    "pytest",
    "coverage[toml]",
    "pytest-cov",

]
doc = [
    # Documentation
    "Sphinx",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme",
    "myst-parser",
    "sphinxcontrib-typer",
]
vscode_doc = ["esbonio", "rst2html", "rstcheck"]

[tool.ruff.lint]
select = ["B", "UP", "D", "DOC"]
# non-imperative-mood (D401)
exclude = ["D401"]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true


[tool.pytest.ini_options]
pythonpath = "src"
log_file = "logs/tests.log"
log_file_date_format = "%Y-%m-%dT%H:%M:%S.%f%z"
log_file_format = "%(asctime)s %(levelname)s:%(funcName)s: %(message)s [in %(pathname)s:%(lineno)d]"
log_file_level = "DEBUG"

[tool.coverage.run]
branch = true
parallel = true
# omit = [""]

[tool.scriv]
# version = "literal: pyproject.toml: project.version"
version = "literal: src/cookiecutter_python_base/__init__.py: __version__"
format = "md"
md_header_level = "2"
entry_title_template = "file: changelog.d/templates/entry_title_template.md.j2"
new_fragment_template = "file: changelog.d/templates/new_fragment.${config:format}.j2"
